# caedus-covid

./: .gitignore  CaedusCovid19_19Mar20.py  Dockerfile  LICENSE  Pipfile  README.md  covid_penn.py  docker-compose.yml  server.py
.ropeproject/: globalnames
api/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/app/: app.py  main.py  views.py
api/app/config/: base.py  production.py
api/docker_scripts/: gunicorn_conf.py  start-reload.sh  start.sh
comodels/.ropeproject/: globalnames
comodels/param_estimation/: __init__.py  beta_gamma.py
comodels/param_estimation/.ropeproject/: globalnames
comodels/sir/: __init__.py  penn.py  sir.py
comodels/sir/.ropeproject/: globalnames
covid-modeling-master/: Physical_Capacity.ipynb  eda.py  generate_ma_csv.py  group_testing.py  mass_pop_data.py  model.py  nyt_data.py  sir_fitting_us.py  tx_pop_data.py  us_county_populations.csv  us_states.py
frontend/: .editorconfig  .eslintrc.js  .gitignore  Dockerfile  README.md  nuxt.config.js  package.json
frontend/src/layouts/: default.vue  error.vue
frontend/src/pages/: index.vue
frontend/src/plugins/: ant-design-vue.js  axios.js  vue-mq.js
frontend/src/router/: index.js
frontend/src/server/: index.js
frontend/src/static/: .htaccess
visualization/: .gitignore  app-single.py  app.py  app.yaml  config-dummy.ini  navbar.py  requirements.txt
webapp/: app.yaml  index.py  requirements.txt
webapp/templates/: about.html  contact.html  data_models.html  header.html  index.html  layout.html  products.html
(+7 files in other folders)
