[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
email-validator = "^1.0.5"
fastapi-sqlalchemy = "^0.1.2"
fastapi = "^0.49.0"
gunicorn = "^20.0.4"
uvicorn = "^0.11.3"
psycopg2-binary = "^2.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
